tests/neg/i9472b/A.scala
package example.reproduction

object Reproduction // error

